packages/typ/tests/fixtures/diagnostics/0257_fun_explicit_poly_returns_bool_02.ml.infer.expected
File "0257_fun_explicit_poly_returns_bool_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0257_fun_explicit_poly_returns_bool_02 is not a valid module name.

File "0257_fun_explicit_poly_returns_bool_02.ml", line 1, characters 30-43:
1 | let bad_beta : 'a. 'a -> 'a = fun _ -> true
                                  ^^^^^^^^^^^^^
Error: This definition has type bool -> bool which is less general than
         'a. 'a -> 'a
       The type bool is not a type variable.
